# orcho-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.agents/skills/orcho-mcp/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  release.yml  scorecard.yml
.orcho/multiagent/: plugin.py
docs/: AGENTS.md  control_loop_walkthrough.md  mcp_client_setup.md  mcp_schema.json  run_lifecycle.md  testing.md  typed_boundary_pilot.md  ux_vision.md
docs/architecture/: anatomy_of_a_request.md  control_state_machine.md  delivery_gate_projection.md  mcp_boundaries.md  observation_delivery.md
docs/demos/: demo-1b-single-project-mcp.md
docs/ux/: captain_correction_scope_semantics.md  captain_workflow_audit.md  flagship_gap_spec.md  flagship_roadmap.md  lineage_recovery_guidance.md
scripts/: mcp_inspector.sh  post_restart_smoke.py
src/orcho_mcp/: AGENTS.md  __init__.py  __main__.py  client_interactions.py  discovery.py  errors.py  event_tail.py  instance.py  onboarding.py  prompts.py  server.py  tool_error_delivery.py  tools.py  workflows.py  workspace_state.py
src/orcho_mcp/_onboarding/: getting_started.md
src/orcho_mcp/authoring/: __init__.py  plan_validation.py  prompt_resolution.py
src/orcho_mcp/inspection/: __init__.py  diagnosis.py  diff.py  evidence.py  verification_cockpit.py
src/orcho_mcp/observe/: __init__.py  handoff_hints.py  live_status.py  observation.py  resource_subscriptions.py  summary.py  watch.py
src/orcho_mcp/resources/: __init__.py  helpers.py  profiles.py  projects.py  runs.py  workflows.py  workspace.py
src/orcho_mcp/run_control/: __init__.py  advice.py  delivery.py  handoff.py  lifecycle.py  typed_pilot.py
src/orcho_mcp/schemas/: __init__.py  authoring.py  inspection.py  observe.py  read.py  run_control.py  shared.py  workflows.py  workspace.py
src/orcho_mcp/services/: __init__.py  action_readiness.py  continuation.py  delivery_gate.py  errors.py  meta_summary.py  pending_decisions.py  read_queries.py  run_artifacts.py  run_control_boundary.py  run_events.py  run_lineage.py  run_lookup.py  run_projection.py  run_reads.py  status_merge.py  workflow_recipes.py
src/orcho_mcp/supervisor/: AGENTS.md  __init__.py  cancel.py  followup.py  handle.py  lifecycle.py  manager.py  paths.py  process.py  recovery.py  resume.py  spawn.py  state.py
tests/: AGENTS.md  README.md  _core_source.py  conftest.py
tests/acceptance/: conftest.py  test_verification_cockpit_provenance_smoke.py
tests/acceptance/mock_pipeline/: test_correction_followup_smoke.py  test_correction_scope_evidence_smoke.py  test_delivery_branch_evidence_smoke.py  test_delivery_gate_smoke.py  test_delivery_scope_violation_smoke.py  test_demo_1b_single_project_mcp.py  test_foreign_run_control_boundary.py  test_handoff_advice_smoke.py  test_handoff_continuation_settlement.py  test_implement_incomplete_handoff.py  test_orcho_run_auto_detect.py  test_orcho_run_cancel.py  test_orcho_run_evidence.py  test_orcho_run_mock.py  test_orcho_run_resume.py  test_orcho_run_via_tool.py  test_orcho_run_watch.py  test_run_diagnosis_smoke.py  test_self_discovery_flow.py  test_smoke_matrix.py  test_subtask_progress.py
tests/fixtures/: mcp_workspace.py  stdio.py
tests/integration/protocol/: test_import_smoke.py  test_initialize_handshake.py  test_resource_catalog.py  test_resource_subscriptions.py  test_schema_snapshot.py  test_stdio_inspect_only_refusal.py  test_stdio_read_tools.py
tests/unit/: conftest.py  test_project_plugin_contract.py
tools/: dump_mcp_schema.py
(+83 files in other folders)
